--- a/Portfolio/JavaScript.html
+++ b/Portfolio/JavaScript.html
@@ -36,10 +36,10 @@
     <!--Use the main area to add the main content of the webpage-->
     <main>
         <div class="mobile">
-            <p>I created a page that allows the user to play a game with the computer. In this game, the player rolls two dice and the computer rolls two dice. The Math.random() method is used to generate each roll of a die, from 1 to 6. 
+            <p>I created a page that allows the user to play a game with the computer. In this game, the player rolls a pair of dice and the computer rolls a pair of dice. 
                 The sum of the computer’s roll is compared to the sum of the player’s roll and whoever has the greater sum is the winner of that round.</p><br>
             <p>I created an html sign-in page for a website. The page obtains the following information: the user’s first and last names, street address, city, state, zip code, email address, and phone number.
-                I also added a username and password section. The username has to be between 4 and 20 characters. The password has to be between 4 and 12 characters, contain at least one digit, and contain at least one uppercase and one lowercase character. </p>
+                I also added a username and password section.</p>
         <br><p>I created a page that can be used to add children of various age groups to one of three Soccer Leagues: Junior, Intermediate, and Senior. 
                The Junior League is for children ages 4–7, the Intermediate League is for children ages 8–11, and the Senior League is for children ages 12–15.</p>
         <br><p>I created a button on a web page that can be clicked to starts a countdown. After the countdown is completed, the word "blastoff!" is shown.</p>
@@ -49,14 +49,14 @@
         <div class="grid tablet-desktop">
                     <figure>
                         <a href="dice.html" target="_blank"><img src="images3/d2.png" alt="Dice Game"></a>
-                        <figcaption>I created a page that allows the user to play a game with the computer. In this game, the player rolls two dice and the computer rolls two dice. The Math.random() method is used to generate each roll of a die, from 1 to 6. 
+                        <figcaption>I created a page that allows the user to play a game with the computer. In this game, the player rolls a pair of dice and the computer rolls a pair of dice.  
                              The sum of the computer’s roll is compared to the sum of the player’s roll and whoever has the greater sum is the winner of that round. </figcaption>
                     </figure>
             
                     <figure>
                         <a href="sign_in3.html" target="_blank"><img src="login.jpg" alt="Sign In form"></a>
                         <figcaption>I created an html sign-in page for a website. The page obtains the following information: the user’s first and last names, street address, city, state, zip code, email address, and phone number.
-                         I also added a username and password section. The username has to be between 4 and 20 characters. The password has to be between 4 and 12 characters, contain at least one digit, and contain at least one uppercase and one lowercase character. </figcaption>
+                         I also added a username and password section. </figcaption>
                     </figure>
 
                     <figure>
