--- a/Portfolio/PHP.html
+++ b/Portfolio/PHP.html
@@ -39,10 +39,10 @@
              If the amount due is greater than 0, an email is generated and sent to the customer with that amount in the message. If the amount due is zero or there is a credit, a thank-you email is generated that thanks 
              the customer for his or her payment.</p>
              <br><p>I made a fictional Doctor Who website. I created a database named doctorWho. Then I created a page that allows Doctor Who’s assistant to add a new patient record.
-             Then, I made a page that displays three or more fields from each of the patient records added. The patient’s first and last names and a unique identifier along with other information are displayed on that page.
-             I created a page that display all records from any one table from the Doctor Who database. I named this page getRecords.php.</p>
-             <br><p>I created a form that requests the user for his or her name, age, and gender. The information entered is used to set cookies on the user's computer. The cookies then expire in a week.</p>
-             <br><p>I created a page that contains an array of about 20 book titles. The page has an input box for the user to enter the title and, as the user continues typing, the page displays all possible matches (i.e., hints).
+             Then, I made a page that displays three or more fields from each of the patient records added. 
+             I created a page that display all records from any one table from the Doctor Who database. </p>
+             <br><p>I created a form that requests the user's name, age, and gender. The information entered is used to set cookies on the user's computer. The cookies then expire in a week.</p>
+             <br><p>I created a page that contains an array of about 20 book titles. The page has an input box for the user to enter the title and, as the user continues typing, the page displays all possible matches.
              </p>
     
          </div>
@@ -57,17 +57,17 @@
                     <figure>
                         <a href="https://github.com/ajazzar/ajazzar.github.io/tree/main/Portfolio/week_6" target="_blank"><img src="week_6/firstaid.jpg" alt="Doctor Who database"></a>
                         <figcaption>I made a fictional Doctor Who website. I created a database named doctorWho. Then I created a page that allows Doctor Who’s assistant to add a new patient record.
-                         Then, I made a page that displays three or more fields from each of the patient records added. The patient’s first and last names and a unique identifier along with other information are displayed on that page.
-                         I created a page that display all records from any one table from the Doctor Who database. I named this page getRecords.php.</figcaption>
+                         Then, I made a page that displays three or more fields from each of the patient records added. 
+                         I created a page that display all records from any one table from the Doctor Who database. </figcaption>
                     </figure>
 
                     <figure>
                         <a href="https://github.com/ajazzar/ajazzar.github.io/tree/main/Portfolio/week_3" target="_blank"><img src="week_3/cookie.jpg" alt="form that adds cookies to computer"></a>
-                        <figcaption>I created a form that requests the user for his or her name, age, and gender. The information entered is used to set cookies on the user's computer. The cookies then expire in a week.</figcaption>
+                        <figcaption>I created a form that requests the user's name, age, and gender. The information entered is used to set cookies on the user's computer. The cookies then expire in a week.</figcaption>
                     </figure>
                     <figure>
                         <a href="https://github.com/ajazzar/ajazzar.github.io/tree/main/Portfolio/week_2" target="_blank"><img src="book.jpg" alt="book title array"></a>
-                        <figcaption>I created a page that contains an array of 20 book titles. The page has an input box for the user to enter the title and, as the user continues typing, the page displays all possible matches (i.e., hints).</figcaption>
+                        <figcaption>I created a page that contains an array of 20 book titles. The page has an input box for the user to enter the title and, as the user continues typing, the page displays all possible matches.</figcaption>
                     </figure>
         </div>
     </main>
