--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<!--Article tags with header-2-->
   <article>
   	<h2>Greetings! My name is Aaron Jazzar.</h2>
-	  <p>I live in Bradenton, Florida. I hope to some day become a Web Developer.<br>
+	  <p>I live in South Florida and I am a Web Developer.<br>
 	    Please take a look at my Portfolio and feel free to <a href="#contact">contact me</a>.</p>
   </article>
   <hr>
@@ -43,12 +43,12 @@
 	  <br>I made an ePortfolio. I included in my ePortfolio various assignments from 3 different College classes:</p>
 	  <!--Three unordered list items that are web page links that open in a new tab-->
 	  <ul>
-		  <li><a href="https://ajazzar.github.io/Portfolio/JavaScript.html" target="_blank">JavaScript</a></li>
-		  <li><a href="https://ajazzar.github.io/Portfolio/PHP.html" target="_blank">PHP Foundations</a></li>
-		  <li><a href="https://ajazzar.github.io/Portfolio/Mobile_App.html" target="_blank">Mobile App</a></li>
+		  <a href="https://ajazzar.github.io/Portfolio/JavaScript.html" target="_blank"><li>JavaScript</li></a>
+		  <a href="https://ajazzar.github.io/Portfolio/PHP.html" target="_blank"><li>PHP Foundations</li></a>
+		  <a href="https://ajazzar.github.io/Portfolio/Mobile_App.html" target="_blank"><li>Mobile App</li></a>
 	  </ul>
 	  <p>
-	  As a Student at Thinkful, I continue my journey to become a Web Developer.</p>
+	  I continue my journey to become a Web Developer.</p>
  <!--Explain why I want to be a Web Developer with header-3-->
 	 <h3>Roles of a Web Developer:</h3>
 	   <ul>
