--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		  <a href="https://ajazzar.github.io/Portfolio/Mobile_App.html" target="_blank"><li>Mobile App</li></a>
 	  </ul>
 	  <p>
-	  I continue my journey to become a Web Developer.</p>
+	  I graduated from a Thinkful Web Development program on December 9, 2022.</p>
  <!--Explain why I want to be a Web Developer with header-3-->
 	 <h3>Roles of a Web Developer:</h3>
 	   <ul>
