--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="Portfolio/JavaScript.html">JavaScript</a></li>
-            <li><a href="Portfolio/PHP.html">PHP</a></li>
+            //<li><a href="Portfolio/PHP.html">PHP</a></li>
             <li><a href="Portfolio/Mobile_App.html">Mobile App</a></li>
         </ul>
     </nav>
@@ -40,11 +40,11 @@
   <article>
   	<h2>About Me</h2>
   	  <p>After graduating in August 2021 with a Web Applications Certificate from Wilmington University, 
-	  <br>I made an ePortfolio. I included in my ePortfolio various assignments from 3 different College classes:</p>
+	  <br>I made an ePortfolio. I included in my ePortfolio various assignments from 2 different College classes:</p>
 	  <!--Three unordered list items that are web page links that open in a new tab-->
 	  <ul>
 		  <a href="https://ajazzar.github.io/Portfolio/JavaScript.html" target="_blank"><li>JavaScript</li></a>
-		  <a href="https://ajazzar.github.io/Portfolio/PHP.html" target="_blank"><li>PHP Foundations</li></a>
+		  //<a href="https://ajazzar.github.io/Portfolio/PHP.html" target="_blank"><li>PHP Foundations</li></a>
 		  <a href="https://ajazzar.github.io/Portfolio/Mobile_App.html" target="_blank"><li>Mobile App</li></a>
 	  </ul>
 	  <p>
