--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	  
     <!--Three ordered list items that are links that open in a new tab-->
     	  <ol>
-      	    <li><a href="https://www.linkedin.com/in/aaron-jazzar-282aa17b" target="_blank">LinkedIn</a></li>
+      	    <li><a href="https://www.linkedin.com/in/aaron-jazzar" target="_blank">LinkedIn</a></li>
 	    <li><a href="https://github.com/ajazzar" target="_blank">GitHub</a></li>
 	    <li><a href="mailto:ajazzar@mail.usf.edu" target="_blank">email me</a></li>
 	  </ol>
